# TentNetFA

./: .gitignore  AGENTS.md  LICENSE  Planet_metadata.py  README.md  config.yaml  pipeline-connect-setup.sh  pipeline-connect.sh  predict_config.yaml  pyproject.toml  requirements.txt  tile_labels.csv
.github/: allowed-bases.txt
.github/workflows/: ci.yml  claude-code-review.yml
displacement_tracker/: 01_coordinate_scanner.py  02_resample_h5.py  03_train_cnn.py  04_predict_json.py  06_validate_geojson.py  a_tif_loader.py  b1_annotated_scanner.py  b2_image_scanner.py  b_coordinate_scanner.py  c_resample_h5.py  c_resample_manifest.py  d_train_cnn.py  e_predict_json.py  g1_scan_validation.py  g2_validate_geojson.py  g_validate_geojson.py  h2_merge_tuned.py  h_merge_geojsons.py  i_tile_labeler.py  i_zonal_point_sums.py  paired_image_dataset.py  simple_cnn.py
displacement_tracker/evaluation/: analysis_config.json  annotation_reference.py  manual_annotation_results.csv  manual_eval.py  run_all_analyses.py
displacement_tracker/pipelines/: __init__.py  app.py  cli.py  help.md  launch.py  runner.py  spec.py  stop.py
displacement_tracker/util/: annotations.py  config.py  deduplication.py  env_loader.py  hdf5_writer.py  manifest_reader.py  manifest_writer.py  raster_processing.py  reference_data.py  scan_orchestrator.py  (+6 more)
docs/: master-grid-tiling-migration.md  test-patterns.md
gaza_boundaries/: GazaStrip_MunicipalBoundaries.dbf  GazaStrip_MunicipalBoundaries.shp  GazaStrip_MunicipalBoundaries.shx
scripts/: pipeline-connect-setup.sh  pipeline-connect.sh
tests/: _helpers.py  conftest.py  test_add_new_model_results.py  test_annotation_reference.py  test_config_flows.py  test_deduplication.py  test_evaluation_common.py  test_merge_geojsons.py  test_merge_tuned.py  test_pipeline_runner.py  test_reference_data.py  test_scan_orchestrator.py  test_scan_validation.py  test_thresholding.py
(+35 files in other folders)
